--- a/_posts/2025-08-08-1.0.0.md
+++ b/_posts/2025-08-08-1.0.0.md
@@ -47,6 +47,8 @@ The API has also been optimized to reduce response times and improve overall per
 
 For a full list of changes made in this release, please see the [release notes on GitHub](https://github.com/inventree/InvenTree/releases/tag/1.0.0). The major changes are documented below, but there are many other improvements and bug fixes that have been implemented as well.
 
+You can also view a [full changelog between 0.17.0 and 1.0.0](https://github.com/inventree/InvenTree/compare/0.17.0...1.0.0)
+
 ## Major Changes
 
 ### Breaking Changes
@@ -135,7 +137,11 @@ In [#8685](https://github.com/inventree/InvenTree/pull/8685) we removed the [dja
 
 ### Database Changes
 
-### New Features
+### New Features / Improvements
+
+#### Order Calendar Views
+
+We have [reimplemented calendar views](https://github.com/inventree/InvenTree/pull/8933) for purchase orders, sales orders, and build orders. These calendar views allow users to see their orders in a calendar format, making it easier to visualize and manage their order schedules.
 
 #### Email Enhancements
 
@@ -144,6 +150,12 @@ In [#8685](https://github.com/inventree/InvenTree/pull/8685) we removed the [dja
 #### Order Start Dates
 
 In [#PR 8966](https://github.com/inventree/InvenTree/pull/8966) we introduced a new "start date" field for purchase orders and sales orders. This field allows users to specify the date when the order is expected to start processing, which can be useful for planning and scheduling purposes. In [#8915](https://github.com/inventree/InvenTree/pull/8915) the "start date" field was also added for build orders.
+
+#### Reporting Printing
+
+Printing of reports and labels is now [offloaded to the background worker](https://github.com/inventree/InvenTree/pull/9199), allowing for more efficient processing of large reports without blocking the user interface. This change also introduces progress tracking for report generation, so users can see the status of their report as it is being generated.
+
+Additionally, reports and labels can now be generated programatically from plugins, allowing for greater flexibility and customization of report generation.
 
 #### Report Merging
 
@@ -155,15 +167,46 @@ This is selected as an option against a particular report template. Note that it
 
 [PR #10023](https://github.com/inventree/InvenTree/pull/10023) tracks the user who last modified a part parameter, and when it was last modified. This change provides greater visibility into changes made to part parameters.
 
+#### External Build Orders
+
+In [PR #9312](https://github.com/inventree/InvenTree/pull/9312) we introduced support for external build orders, allowing users to manage build orders that are fulfilled by external suppliers. This feature is particularly useful for users who need to manage builds that are outsourced to third-party manufacturers or suppliers.
+
 #### BOM Enhancements
 
 Added support for greater flexibility in managing Bills of Materials (BOMs) - refer to [#10042](https://github.com/inventree/InvenTree/pull/10042) for details.
 
-### Devops Changes
+#### Serial Number Navigation
+
+[PR #9505](https://github.com/inventree/InvenTree/pull/9505) adds the ability to navigate between serial numbers in the user interface.
 
 ### Bug Fixes
 
+There have been a *significant* number of bug fixes in this release, with over [150 tagged PRs](https://github.com/inventree/InvenTree/pulls?q=is%3Apr+milestone%3A1.0.0+label%3Abug+).
+
+Note that many of these bug fixes are related to implementation of the new interface, and may not represent issues present in previous versions of the InvenTree software.
+
 ## Contributors
+
+As always, we would like to extend our heartfelt thanks to all of the contributors who have worked tirelessly to make this release possible. The InvenTree project is a community-driven effort, and it is only through the contributions of our users that we are able to continue improving and evolving the software.
+
+There are now [over 100 contributors](https://github.com/inventree/InvenTree/graphs/contributors) to the InvenTree project, and we are grateful for each and every one of you. Whether you have contributed code, reported bugs, provided feedback, or simply used the software, your support is invaluable to us.
+
+### New Contributors
+
+The following developers made their first contributions to the InvenTree project in this release:
+
+* @gunstr made their first contribution in https://github.com/inventree/InvenTree/pull/9274
+* @reilly-callaway made their first contribution in https://github.com/inventree/InvenTree/pull/9575
+* @aluminum-ice made their first contribution in https://github.com/inventree/InvenTree/pull/9638
+* @cbenhagen made their first contribution in https://github.com/inventree/InvenTree/pull/9641
+* @GoryMoon made their first contribution in https://github.com/inventree/InvenTree/pull/9704
+* @willbicks made their first contribution in https://github.com/inventree/InvenTree/pull/9655
+* @gitbock made their first contribution in https://github.com/inventree/InvenTree/pull/9775
+* @RedEchidnaUK made their first contribution in https://github.com/inventree/InvenTree/pull/9400
+* @tristanle22 made their first contribution in https://github.com/inventree/InvenTree/pull/9532
+* @sufyan-mukadam made their first contribution in https://github.com/inventree/InvenTree/pull/9673
+
+
 
 ## Sponsoring the Project
 
