--- a/_posts/2025-08-08-1.0.0.md
+++ b/_posts/2025-08-08-1.0.0.md
@@ -49,11 +49,9 @@ For a full list of changes made in this release, please see the [release notes o
 
 You can also view a [full changelog between 0.17.0 and 1.0.0](https://github.com/inventree/InvenTree/compare/0.17.0...1.0.0)
 
-## Major Changes
+## Breaking Changes
 
-### Breaking Changes
-
-#### User Interface
+### User Interface
 
 The most significant breaking change in this release is the complete overhaul of the user interface. The new UI is built using a modern javascript / React framework, which means that many of the existing templates and components have been refactored or replaced.
 
@@ -67,7 +65,7 @@ Note that old URLs have been remapped to the new UI, so users should not experie
 
 While we have made every effort to ensure that the new UI is compatible with existing data and functionality, there may be some edge cases where users encounter issues. We encourage users to report any problems they encounter so that we can address them promptly. In particular, if there are any features that are missing or not functioning as expected, please let us know [via GitHub issues](https://github.com/inventree/InvenTree/issues).
 
-#### User Interface Plugins
+### User Interface Plugins
 
 The new UI plugin system provides a significant amount of *context* information to the plugins at render time. This means that plugins can now access information about the current user, the current page, and other relevant data when rendering their components.
 
@@ -85,13 +83,13 @@ To integrate seamlessly with the UI, plugin developers should be aware that some
 
 Note that this is all handled automatically by the plugin creation tool, so developers should not need to worry about this unless they are creating plugins manually.
 
-#### Builtin Plugins
+### Builtin Plugins
 
 The InvenTree project now includes a number of builtin plugins that provide additional functionality and features. These plugins are designed to work seamlessly with the new UI and provide a range of enhancements to the core InvenTree functionality.
 
 Some of these plugins are *mandatory* - as they are required for the core functionality of InvenTree. These mandatory plugins are installed automatically when InvenTree is installed, and cannot be disabled.
 
-#### Docker Changes
+### Docker Changes
 
 We have updated the [supported postgres version](https://github.com/inventree/InvenTree/pull/9041) in our docker image from version 13 to version 17.
 
@@ -99,7 +97,7 @@ For new installations, this should not cause any issues, as the docker image wil
 
 For existing installations, this will only make a difference if you wish to update your existing database. Note that our docker image will still support connection to older versions of postgres, so users can continue to use their existing database without any issues.
 
-#### API Changes
+### API Changes
 
 There have been a significant number of changes to the InvenTree API in this release, although the majority of these changes are backwards compatible.
 
@@ -107,7 +105,7 @@ All API changes are [documented in the source code](https://github.com/inventree
 
 Additionally, the [API schema is documented](https://docs.inventree.org/en/stable/api/schema/) and provides a comprehensive overview of the available endpoints and their parameters.
 
-#### Auth Changes
+### Auth Changes
 
 We have refactored our authentication framework significantly, both to support the new UI and also to align with modern best practices.
 
@@ -115,77 +113,77 @@ These changes should not affect most users, as we have endeavored to maintain co
 
 In particular we have updated our [django-allauth framework](https://github.com/inventree/InvenTree/pull/6293) to align with changes to that library.
 
-#### Bulk Update Mixin
+### Bulk Update Mixin
 
 In [PR #9313](https://github.com/inventree/InvenTree/pull/9313) we introduced a "BulkUpdateMixin" class which allows some API endpoints to support bulk updates. This mixin can be used to extend existing API endpoints to allow for bulk updates of objects, which can significantly improve performance when updating large datasets.
 
-#### Part Scheduling
+### Part Scheduling
 
 The existing "Part Scheduling" feature has been removed in this release, and replaced with a plugin-based solution. This change was made to allow for greater flexibility and customization of the scheduling functionality, as well as to improve performance and maintainability.
 
 Refer to the [InvenTree Stock Forecasting plugin](https://github.com/inventree/inventree-stock-forecasting) to replace the old part scheduling functionality. 
 
-#### Auto-Create Child Builds
+### Auto-Create Child Builds
 
 The "auto-creation of child builds" feature has been removed from the core functionality, as it was not configurable and too narrowly scoped to be useful for most users. This feature has been replaced with a more flexible plugin-based solution, which allows users to create custom logic for automatically creating child builds based on their specific requirements.
 
 Refer to [PR #9574](https://github.com/inventree/InvenTree/pull/9574) for more information.
 
-#### Remove django-import-export
+### Remove django-import-export
 
 In [#8685](https://github.com/inventree/InvenTree/pull/8685) we removed the [django-import-export](https://django-import-export.readthedocs.io/en/latest/) framework, which is what was previously used for data import and export. This has been replaced with a [custom API driven solution](https://github.com/inventree/InvenTree/issues/8686) which is more flexible and easier to use. Our new framework runs in the background worker, allowing for processing of large datasets without blocking the user interface (or causing the web server to timeout).
 
-### Database Changes
+## New Features / Improvements
 
-### New Features / Improvements
+There are a number of new features and improvements in this release, many of which have been requested by our community. Some of the most notable changes include:
 
-#### Order Calendar Views
+### Order Calendar Views
 
 We have [reimplemented calendar views](https://github.com/inventree/InvenTree/pull/8933) for purchase orders, sales orders, and build orders. These calendar views allow users to see their orders in a calendar format, making it easier to visualize and manage their order schedules.
 
-#### Email Enhancements
+### Email Enhancements
 
 [PR #9608](https://github.com/inventree/InvenTree/pull/9608) enhances email support capabilities, including plugin support for sending and receiving emails.
 
-#### Order Start Dates
+### Order Start Dates
 
 In [#PR 8966](https://github.com/inventree/InvenTree/pull/8966) we introduced a new "start date" field for purchase orders and sales orders. This field allows users to specify the date when the order is expected to start processing, which can be useful for planning and scheduling purposes. In [#8915](https://github.com/inventree/InvenTree/pull/8915) the "start date" field was also added for build orders.
 
-#### Reporting Printing
+### Reporting Printing
 
 Printing of reports and labels is now [offloaded to the background worker](https://github.com/inventree/InvenTree/pull/9199), allowing for more efficient processing of large reports without blocking the user interface. This change also introduces progress tracking for report generation, so users can see the status of their report as it is being generated.
 
 Additionally, reports and labels can now be generated programatically from plugins, allowing for greater flexibility and customization of report generation.
 
-#### Report Merging
+### Report Merging
 
 [PR #9532](https://github.com/inventree/InvenTree/pull/9532) introduces a new feature that allows users to merge multiple items into a single report. When generating reports against multiple items, users can now select to render the report as a single document, rather than generating separate reports for each item.
 
 This is selected as an option against a particular report template. Note that it requires the report template to be designed to support merging, as not all templates will be suitable for this feature.
 
-#### Part Parameter Tracking
+### Part Parameter Tracking
 
 [PR #10023](https://github.com/inventree/InvenTree/pull/10023) tracks the user who last modified a part parameter, and when it was last modified. This change provides greater visibility into changes made to part parameters.
 
-#### External Build Orders
+### External Build Orders
 
 In [PR #9312](https://github.com/inventree/InvenTree/pull/9312) we introduced support for external build orders, allowing users to manage build orders that are fulfilled by external suppliers. This feature is particularly useful for users who need to manage builds that are outsourced to third-party manufacturers or suppliers.
 
-#### BOM Enhancements
+### BOM Enhancements
 
 Added support for greater flexibility in managing Bills of Materials (BOMs) - refer to [#10042](https://github.com/inventree/InvenTree/pull/10042) for details.
 
-#### Serial Number Navigation
+### Serial Number Navigation
 
 [PR #9505](https://github.com/inventree/InvenTree/pull/9505) adds the ability to navigate between serial numbers in the user interface.
 
-### Bug Fixes
+## Bug Fixes
 
 There have been a *significant* number of bug fixes in this release, with over [150 tagged PRs](https://github.com/inventree/InvenTree/pulls?q=is%3Apr+milestone%3A1.0.0+label%3Abug+).
 
 Note that many of these bug fixes are related to implementation of the new interface, and may not represent issues present in previous versions of the InvenTree software.
 
-## Contributors
+## Contributing
 
 As always, we would like to extend our heartfelt thanks to all of the contributors who have worked tirelessly to make this release possible. The InvenTree project is a community-driven effort, and it is only through the contributions of our users that we are able to continue improving and evolving the software.
 
@@ -206,8 +204,39 @@ The following developers made their first contributions to the InvenTree project
 * @tristanle22 made their first contribution in https://github.com/inventree/InvenTree/pull/9532
 * @sufyan-mukadam made their first contribution in https://github.com/inventree/InvenTree/pull/9673
 
+### Translation
 
+Our [translation efforts](https://crowdin.com/project/inventree) continue to grow, with coverage increasing across a wide range of languages. We are grateful to all of our translators who have contributed to making InvenTree accessible to users around the world.
 
-## Sponsoring the Project
+If you are interested in contributing to the translation efforts, please visit our [Crowdin project](https://crowdin.com/project/inventree) and join the community of translators.
+
+### Code Contributions
+
+Check out our GitHub page for a list of outstanding issues and feature requests. If you are a developer, you can help to contribute to the project by submitting a pull request.
+
+In particular, we are looking for assistance with frontend development, as we work to complete the new user interface and improve the overall UI/UX of the project.
+
+### Report Bugs
+
+If you encounter a bug in InvenTree, please report it on our [GitHub issues page](https://github.com/inventree/inventree/issues). Please ensure that you provide as much information as possible to help us diagnose and fix the issue.
+
+### Documentation / Technical Writing
+
+If you have experience with technical writing, you can help to improve the InvenTree documentation. We are always looking for help to improve the documentation and make it more accessible to new users.
+
+### Financial Support
+
+Sponsorships help to keep this project sustainable, and buys time for the core developers to commit to the project. A recurring or one off sponsorship is a great way to help InvenTree development to continue at full steam!
+
+The work undertaken to keep InvenTree running is done by a very small group of core developers, who do so in their spare time (and are not sponsored by their employers to work on InvenTree). If you benefit from the InvenTree project, please consider contributing to maintain vibrant development of this software!
+
+- [Polar.sh](https://polar.sh/inventree)
+- [GitHub](https://github.com/sponsors/inventree)
+
+If you are using InvenTree in a commercial setting, please consider sponsoring the project to help support ongoing development and maintenance. Your support is greatly appreciated and helps to ensure that InvenTree remains a viable and sustainable project for years to come.
 
 ## Future Plans
+
+Our focus over the last year has been on the new user interface, and we are excited to see it finally come to fruition in this release. However, there is still much work to be done, and we have a number of plans for future development.
+
+Check out our [GitHub issues page](https://github.com/inventree/inventree/issues/) for a list of outstanding issues and feature requests. We are always looking for help to improve the project, and we welcome contributions from the community.
