Refactor blog post

--- a/_posts/2025-08-08-1.0.0.md
+++ b/_posts/2025-08-08-1.0.0.md
@@ -11,13 +11,29 @@ This release includes significant updates to the user interface, performance opt
 
 With [over 550 closed issues](https://github.com/inventree/InvenTree/pulls?q=is%3Apr+milestone%3A1.0.0+), this release is a testament to the hard work and dedication of our contributors. We are excited to see how these changes will benefit users and help them manage their inventories more effectively.
 
-## Overview of Changes
+### Changelog
+
+For a full list of changes made in this release, please see the [release notes on GitHub](https://github.com/inventree/InvenTree/releases/tag/1.0.0). The major changes are documented below, but there are many other improvements and bug fixes that have been implemented as well.
+
+You can also view a [full changelog between 0.17.0 and 1.0.0](https://github.com/inventree/InvenTree/compare/0.17.0...1.0.0)
+
+### Update Procedure
+
+To update to the latest version of InvenTree, please follow the updating instructions provided in the [InvenTree documentation](https://docs.inventree.org). Note that the particular update procedure may vary depending on your installation method.
+
+## Breaking Changes
 
 ### User Interface Overhaul
 
 By far the largest change introduced in this release is the new user interface. The UI has been completely refactored to use a modern javascript / React framework, which allows for a more responsive and dynamic user experience. This change not only improves the performance of the application but also makes it easier to maintain and extend in the future.
 
+The new UI is now available at the `/web/` endpoint - and the old UI has been removed entirely.
+
+Note that old URLs have been remapped to the new UI, so users should not experience any issues with bookmarks or links that point to the old interface.
+
 The general "look and feel" of the InvenTree UI remains consistent with previous versions, but the underlying technology has been updated to provide a more robust and flexible foundation for future development.
+
+While we have made every effort to ensure that the new UI is compatible with existing data and functionality, there may be some edge cases where users encounter issues. We encourage users to report any problems they encounter so that we can address them promptly. In particular, if there are any features that are missing or not functioning as expected, please let us know [via GitHub issues](https://github.com/inventree/InvenTree/issues).
 
 ### Plugin System Enhancements
 
@@ -27,45 +43,11 @@ To this end, we have released an [npm package](https://www.npmjs.com/package/@in
 
 Additionally, we now have a [plugin creation tool](https://github.com/inventree/plugin-creator/) which allows users to quickly scaffold InvenTree plugins.
 
-### Dashboard
-
-The new user interface now includes a customizable dashboard that allows users to add, remove, and rearrange widgets according to their preferences. This feature provides a more personalized experience and enables users to focus on the information that is most relevant to them.
-
-This dashboard can be extended with custom widgets provided by plugins, allowing for even greater flexibility and customization.
-
-### Data Import and Export
-
-Our data import and export framework has been completely rewritten, and replaced with a custom API driven solution.
-
-### Performance Improvements
-
-We have made significant performance improvements across the board, particularly in areas such as data loading and rendering. The new UI framework is designed to be more efficient, which should result in a smoother experience for users, especially when dealing with large datasets.
-
-The API has also been optimized to reduce response times and improve overall performance.
-
-### And More...
-
-For a full list of changes made in this release, please see the [release notes on GitHub](https://github.com/inventree/InvenTree/releases/tag/1.0.0). The major changes are documented below, but there are many other improvements and bug fixes that have been implemented as well.
-
-You can also view a [full changelog between 0.17.0 and 1.0.0](https://github.com/inventree/InvenTree/compare/0.17.0...1.0.0)
-
-## Breaking Changes
-
-### User Interface
-
-The most significant breaking change in this release is the complete overhaul of the user interface. The new UI is built using a modern javascript / React framework, which means that many of the existing templates and components have been refactored or replaced.
+### User Interface Plugins
 
 This change may require some adjustments for users who have customized their InvenTree installation, particularly if they have created custom templates or plugins that rely on the old UI structure.
 
 Any plugins which have not been updated to work with the new UI will not function correctly, and will need to be adjusted to work with the new interface. This is after we [removed the old PanelMixin class](https://github.com/inventree/InvenTree/pull/8828). This means that any plugins which inherit from the PanelMixin class will now throw an error when loaded.
-
-The new UI is now available at the `/web/` endpoint - and the old UI has been removed entirely.
-
-Note that old URLs have been remapped to the new UI, so users should not experience any issues with bookmarks or links that point to the old interface.
-
-While we have made every effort to ensure that the new UI is compatible with existing data and functionality, there may be some edge cases where users encounter issues. We encourage users to report any problems they encounter so that we can address them promptly. In particular, if there are any features that are missing or not functioning as expected, please let us know [via GitHub issues](https://github.com/inventree/InvenTree/issues).
-
-### User Interface Plugins
 
 The new UI plugin system provides a significant amount of *context* information to the plugins at render time. This means that plugins can now access information about the current user, the current page, and other relevant data when rendering their components.
 
@@ -136,6 +118,22 @@ In [#8685](https://github.com/inventree/InvenTree/pull/8685) we removed the [dja
 ## New Features / Improvements
 
 There are a number of new features and improvements in this release, many of which have been requested by our community. Some of the most notable changes include:
+
+### Performance Improvements
+
+We have made significant performance improvements across the board, particularly in areas such as data loading and rendering. The new UI framework is designed to be more efficient, which should result in a smoother experience for users, especially when dealing with large datasets.
+
+The API has also been optimized to reduce response times and improve overall performance.
+
+### Dashboard
+
+The new user interface now includes a customizable dashboard that allows users to add, remove, and rearrange widgets according to their preferences. This feature provides a more personalized experience and enables users to focus on the information that is most relevant to them.
+
+This dashboard can be extended with custom widgets provided by plugins, allowing for even greater flexibility and customization.
+
+### Data Import and Export
+
+Our data import and export framework has been completely rewritten, and replaced with a custom API driven solution.
 
 ### Order Calendar Views
 
