Breaking change for notification methods

--- a/_posts/2025-08-08-1.0.0.md
+++ b/_posts/2025-08-08-1.0.0.md
@@ -65,6 +65,12 @@ To integrate seamlessly with the UI, plugin developers should be aware that some
 
 Note that this is all handled automatically by the plugin creation tool, so developers should not need to worry about this unless they are creating plugins manually.
 
+### Notification Plugins
+
+We have changed the way that notification methods can be [implented via plugins](https://github.com/inventree/InvenTree/pull/9735). This new system provides a much more flexible and extensible way for plugins to implement custom notification methods, allowing for greater customization and control over how notifications are handled within the InvenTree system.
+
+*However* - this change is *not* backwards compatible with existing plugins that implement notification methods. Plugin developers will need to update their plugins to use the new notification system in order to continue providing custom notification methods.
+
 ### Builtin Plugins
 
 The InvenTree project now includes a number of builtin plugins that provide additional functionality and features. These plugins are designed to work seamlessly with the new UI and provide a range of enhancements to the core InvenTree functionality.
