Fix notification plugin docs

--- a/_posts/2025-08-08-1.0.0.md
+++ b/_posts/2025-08-08-1.0.0.md
@@ -67,7 +67,7 @@ Note that this is all handled automatically by the plugin creation tool, so deve
 
 ### Notification Plugins
 
-We have changed the way that notification methods can be [implented via plugins](https://github.com/inventree/InvenTree/pull/9735). This new system provides a much more flexible and extensible way for plugins to implement custom notification methods, allowing for greater customization and control over how notifications are handled within the InvenTree system.
+We have changed the way that notification methods can be [implented via plugins](https://github.com/inventree/InvenTree/pull/9735). This change was made to ensure that custom notification methods were able to be loaded and unloaded correctly, and to provide a more consistent approach for implementing notification methods across different plugins.
 
 *However* - this change is *not* backwards compatible with existing plugins that implement notification methods. Plugin developers will need to update their plugins to use the new notification system in order to continue providing custom notification methods.
 
