Add more breaking changeas

--- a/_posts/2025-08-08-1.0.0.md
+++ b/_posts/2025-08-08-1.0.0.md
@@ -111,6 +111,25 @@ The existing "Part Scheduling" feature has been removed in this release, and rep
 
 Refer to the [InvenTree Stock Forecasting plugin](https://github.com/inventree/inventree-stock-forecasting) to replace the old part scheduling functionality. 
 
+### Part Stocktake
+
+The "Part Stocktake" feature has been refactored to make use of the new import/export framework. Prior to `1.0.0`, the concept of "stocktake" referred to two separate concepts:
+
+1. The ability to provide a snapshot of the current stock levels for a part
+2. Record historical stock levels for a part
+
+These are now split into two separate features:
+
+#### Stocktake Export
+
+Exporting stocktake data is now handled by a provided export plugin, which integrates into the refactored data export framework. This means that the "stocktake" feature is no longer a separate exporter pathway. Refer to the InvenTree documentation for details on how to use the new stocktake export functionality.
+
+#### Stock History
+
+The "Stock History" feature remains in place, and allows users to view the historical stock levels for a part. This feature provides a detailed view of how stock levels have changed over time, and can be useful for tracking inventory trends and identifying potential issues.
+
+Refer to [PR #10124](https://github.com/inventree/InvenTree/pull/10124) for further information on this change.
+
 ### Auto-Create Child Builds
 
 The "auto-creation of child builds" feature has been removed from the core functionality, as it was not configurable and too narrowly scoped to be useful for most users. This feature has been replaced with a more flexible plugin-based solution, which allows users to create custom logic for automatically creating child builds based on their specific requirements.
@@ -120,6 +139,14 @@ Refer to [PR #9574](https://github.com/inventree/InvenTree/pull/9574) for more i
 ### Remove django-import-export
 
 In [#8685](https://github.com/inventree/InvenTree/pull/8685) we removed the [django-import-export](https://django-import-export.readthedocs.io/en/latest/) framework, which is what was previously used for data import and export. This has been replaced with a [custom API driven solution](https://github.com/inventree/InvenTree/issues/8686) which is more flexible and easier to use. Our new framework runs in the background worker, allowing for processing of large datasets without blocking the user interface (or causing the web server to timeout).
+
+### Stock Return
+
+The "Stock Return" functionality has been expanded to allow for stock to be returned after having been consumed by a build order. To facilitate this, the API has been refactored to allow for stock returns to be processed more efficiently, and the user interface has been updated to reflect these changes.
+
+However this does represent a breaking change to the API, and users who have implemented custom logic for handling stock returns will need to update their code to accommodate the new API structure.
+
+Refer to [PR #10132](https://github.com/inventree/InvenTree/pull/10132) for more information on this change.
 
 ## New Features / Improvements
 
