--- a/_posts/2025-08-08-1.0.0.md
+++ b/_posts/2025-08-08-1.0.0.md
@@ -9,7 +9,7 @@ The 1.0.0 release marks a major milestone for the InvenTree project. Not only do
 
 This release includes significant updates to the user interface, performance optimizations, and a range of new functionalities that have been requested by our community.
 
-With [over 550 closed issues](https://github.com/inventree/InvenTree/pulls?q=is%3Apr+milestone%3A1.0.0+), this release is a testament to the hard work and dedication of our contributors. We are excited to see how these changes will benefit users and help them manage their inventories more effectively.
+With [over 600 closed issues](https://github.com/inventree/InvenTree/pulls?q=is%3Apr+milestone%3A1.0.0+), this release is a testament to the hard work and dedication of our contributors. We are excited to see how these changes will benefit users and help them manage their inventories more effectively.
 
 ### Changelog
 
@@ -22,6 +22,10 @@ You can also view a [full changelog between 0.17.0 and 1.0.0](https://github.com
 To update to the latest version of InvenTree, please follow the updating instructions provided in the [InvenTree documentation](https://docs.inventree.org). Note that the particular update procedure may vary depending on your installation method.
 
 ## Breaking Changes
+
+As with any major release, there are some breaking changes that users should be aware of. These changes may require adjustments to existing installations, plugins, or customizations.
+
+The most significant breaking changes are documented below, but users should also refer to the [full list of breaking changes](https://github.com/inventree/InvenTree/pulls?q=is%3Apr+milestone%3A1.0.0+label%3Abreaking).
 
 ### User Interface Overhaul
 
@@ -42,6 +46,12 @@ The plugin system has received significat attention in this release. In particul
 To this end, we have released an [npm package](https://www.npmjs.com/package/@inventreedb/ui) that provides an interface layer for plugins looking to render custom components within the InvenTree UI.
 
 Additionally, we now have a [plugin creation tool](https://github.com/inventree/plugin-creator/) which allows users to quickly scaffold InvenTree plugins.
+
+### Machine Registry Enhancements
+
+The machine registry has [received an overhaul](https://github.com/inventree/InvenTree/pull/10150) which introduces a breaking change for any plugins which implement custom machine registry functionality.
+
+If you have implemented a custom machine registry plugin, you will need to update your plugin to work with the new machine registry system. In particular, the plugin must now implement a new `MachineDriverMixin` class, which provides a consistent interface for interacting with the machine registry.
 
 ### User Interface Plugins
 
@@ -92,6 +102,10 @@ There have been a significant number of changes to the InvenTree API in this rel
 All API changes are [documented in the source code](https://github.com/inventree/InvenTree/blob/master/src/backend/InvenTree/InvenTree/api_version.py), and users can refer to this file to see the specific changes that have been made.
 
 Additionally, the [API schema is documented](https://docs.inventree.org/en/stable/api/schema/) and provides a comprehensive overview of the available endpoints and their parameters.
+
+### Stock Item Creation
+
+Creation of stock items via the API has been adjusted, to ensure that the return type is consistent. Now, the return type is always an array of items, even if only a single item is created. Refer to [PR #9969](https://github.com/inventree/InvenTree/pull/9969) for more information on this change.
 
 ### Auth Changes
 
@@ -204,9 +218,21 @@ In [PR #9312](https://github.com/inventree/InvenTree/pull/9312) we introduced su
 
 Added support for greater flexibility in managing Bills of Materials (BOMs) - refer to [#10042](https://github.com/inventree/InvenTree/pull/10042) for details.
 
+### Build Order Consume
+
+[PR #8191](https://github.com/inventree/InvenTree/pull/8191) adds the ability to partially consume stock against a build order, even if the build order is not yet complete. This feature allows users to consume stock as it allocated, rather than waiting for the entire build order to be completed. This provides users greater flexibility in managing their inventory and build orders, and can help to reduce delays in production.
+
 ### Serial Number Navigation
 
 [PR #9505](https://github.com/inventree/InvenTree/pull/9505) adds the ability to navigate between serial numbers in the user interface.
+
+### Override Global Settings
+
+[PR #9718](https://github.com/inventree/InvenTree/pull/9718) introduces the ability to override global settings via system-level configuration. This allows system administrators to "lock down" certain settings, preventing users from changing them in the user interface. This is particularly useful for ensuring consistency across installations and preventing accidental changes to critical settings.
+
+### Override Plugins
+
+In [PR #10094](https://github.com/inventree/InvenTree/pull/9718) we introduced the ability for system adminstrators to mark certain plugins as "mandatory" at the system configuration level. This means that these plugins cannot be disabled or uninstalled by users, ensuring that critical functionality remains available.
 
 ## Bug Fixes
 
