Add donation links

--- a/_posts/2025-08-08-1.0.0.md
+++ b/_posts/2025-08-08-1.0.0.md
@@ -292,6 +292,8 @@ The work undertaken to keep InvenTree running is done by a very small group of c
 
 If you are using InvenTree in a commercial setting, please consider sponsoring the project to help support ongoing development and maintenance. Your support is greatly appreciated and helps to ensure that InvenTree remains a viable and sustainable project for years to come.
 
+If your company benefits from InvenTree, please consider a [one time sponsorship](https://buy.polar.sh/polar_cl_d7lPAgS9jnW8NDOSWATqdz2gs3wUD1x5M5o7C2rPoAL) or a [recurring sponsorship](https://buy.polar.sh/polar_cl_UlGc3bUjwB7Vx89dhAY2iF3kUIVFBJC5mJyow4NlJa6) to help support the project.
+
 ## Future Plans
 
 Our focus over the last year has been on the new user interface, and we are excited to see it finally come to fruition in this release. However, there is still much work to be done, and we have a number of plans for future development.
