Add note on docker image change

--- a/_posts/2025-08-25-1.0.0.md
+++ b/_posts/2025-08-25-1.0.0.md
@@ -89,7 +89,11 @@ Some of these plugins are *mandatory* - as they are required for the core functi
 
 ### Docker Changes
 
-We have updated the [supported postgres version](https://github.com/inventree/InvenTree/pull/9041) in our docker image from version 13 to version 17.
+Our [official docker image](https://hub.docker.com/r/inventree/inventree) is now based on a Debian image, rather than Alpine. [This change](https://github.com/inventree/InvenTree/pull/10227) was made due to a number of limitations with the Alpine image. The move to a Debian image also brings the docker image closer to the other installation methods, and the devcontainer setup.
+
+Functionally, the new docker image should behave identically to the old image, and users should not experience any issues when updating.
+
+Additionally, we have updated the [supported postgres version](https://github.com/inventree/InvenTree/pull/9041) in our docker image from version 13 to version 17.
 
 For new installations, this should not cause any issues, as the docker image will automatically pull the latest version of postgres.
 
